recommendation/kubernetes/Deployment-v3.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: recommendation
    version: v3
  name: recommendation-v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendation
      version: v3
  template:
    metadata:
      labels:
        app: recommendation
        version: v3
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:
        - name: MESSAGE_OVERRIDE
          value: "iPhones are the best.  Tim Cook says hello."
        name: customer
        # This is the last built one from the coles demo
        image: docker.io/mhildema/customer:v3.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        securityContext:
          privileged: false
