recommendation/kubernetes/Deployment-v6.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: recommendation
    version: v6
  name: recommendation-v6
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendation
      version: v6
  template:
    metadata:
      labels:
        app: recommendation
        version: v6
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/scheme: "http"
    spec:
      containers:
      - env:
        - name: JAVA_OPTIONS
          value: -Xmx256m
        image: example/recommendation:v6
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - curl
            - localhost:8080/health
          initialDelaySeconds: 20
          periodSeconds: 5
          timeoutSeconds: 10
        name: recommendation
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - curl
            - localhost:8080/health
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 10
        securityContext:
          privileged: false
