recommendation/kubernetes/Deployment-virtualized.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: recommendation
    version: virtualized
  name: recommendation-virtualized
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendation
      version: virtualized
  template:
    metadata:
      labels:
        app: recommendation
        version: virtualized
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      containers:
      - env:
        image: example/recommendation:virtualized
        args: ["-import=/go/bin/simulation.json"]
        imagePullPolicy: IfNotPresent
        name: recommendation
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
