recommendation/kubernetes/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: recommendation
    version: v1
  name: recommendation-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendation
      version: v1
  template:
    metadata:
      labels:
        app: recommendation
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:
        - name: JAVA_OPTIONS
          value: -Xms15m -Xmx15m -Xmn15m -Xdebug -Xrunjdwp:transport=dt_socket,address=5000,server=y,suspend=n
        name: recommendation          
        image: quay.io/rhdevelopers/istio-tutorial-recommendation:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        # FIXME: liveness and readiness probes were causing recommendation service not to work with istio
        # livenessProbe:
        #   exec:
        #     command:
        #     - curl
        #     - localhost:8080/health          
        #   initialDelaySeconds: 3
        #   periodSeconds: 5
        #   timeoutSeconds: 5
        # readinessProbe:
        #   exec:
        #     command:
        #     - curl
        #     - localhost:8080/health          
        #   initialDelaySeconds: 3
        #   periodSeconds: 5
        #   timeoutSeconds: 5
        securityContext:
          privileged: false
